# problem-reductions

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  book.toml
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: problem.md  rule.md
.github/workflows/: ci.yml  cleanup-branches.yml  community-call.yml
benches/: solver_benchmarks.rs
docs/agent-profiles/: FEATURES.md  SKILLS.md  cli-tool-dr-sarah-chen.md  pred-sym-prof-yuki-tanaka.md
docs/paper/: lib.typ  reductions.typ  references.bib
docs/plans/: 2026-02-27-binpacking-model.md  2026-03-01-meta-power-design.md  2026-03-01-problem-categorization-design.md  2026-03-04-knapsack-model.md  2026-03-04-knapsack-to-qubo.md  2026-03-04-lcs-to-maximumindependentset.md  2026-03-04-longest-common-subsequence.md  2026-03-04-zero-to-infinity-design.md  2026-03-04-zero-to-infinity-v2-design.md  2026-03-04-zero-to-infinity-v2-impl.md  2026-03-10-multiprocessor-scheduling.md  2026-03-10-partition.md  2026-03-11-asymptotic-normal-form-redesign-design.md  (+6 more)
examples/: chained_reduction_factoring_to_spinglass.rs  detect_isolated_problems.rs  detect_unreachable_from_3sat.rs  export_examples.rs  export_module_graph.rs  reduction_binpacking_to_ilp.rs  reduction_circuitsat_to_ilp.rs  reduction_circuitsat_to_spinglass.rs  reduction_factoring_to_circuitsat.rs  reduction_factoring_to_ilp.rs  reduction_ilp_to_qubo.rs  reduction_kcoloring_to_ilp.rs  reduction_knapsack_to_qubo.rs  reduction_ksatisfiability_to_subsetsum.rs  reduction_longestcommonsubsequence_to_ilp.rs  reduction_longestcommonsubsequence_to_maximumindependentset.rs  reduction_maximumclique_to_ilp.rs  reduction_maximumindependentset_to_ilp.rs  reduction_maximumindependentset_to_maximumclique.rs  reduction_maximummatching_to_ilp.rs  reduction_maximumsetpacking_to_ilp.rs  reduction_minimumdominatingset_to_ilp.rs  reduction_minimumsetcovering_to_ilp.rs  reduction_minimumvertexcover_to_ilp.rs  reduction_qubo_to_ilp.rs  reduction_satisfiability_to_maximumindependentset.rs  reduction_travelingsalesman_to_ilp.rs  regenerate_fixtures.rs
problemreductions-cli/: Cargo.toml
problemreductions-cli/src/: cli.rs  dispatch.rs  main.rs  output.rs  problem_name.rs  test_support.rs  util.rs
problemreductions-cli/src/commands/: create.rs  evaluate.rs  graph.rs  inspect.rs  reduce.rs  solve.rs
problemreductions-cli/src/commands/create/: schema_support.rs
problemreductions-cli/src/mcp/: prompts.rs  tests.rs  tools.rs
problemreductions-cli/tests/: cli_tests.rs  pred_sym_tests.rs
references/: rules-karp.md
scripts/: fetch_papers.py  gen_module_graph.py  gen_paper_index.py  generate_qubo_tests.py  make_helpers.sh  pipeline_board.py  pipeline_checks.py  pipeline_pr.py  pipeline_skill_context.py  pipeline_worktree.py  project_board_poll.py  project_board_recover.py  test_make_helpers.py  test_pipeline_board.py  test_pipeline_checks.py  test_pipeline_pr.py  test_pipeline_skill_context.py  test_pipeline_worktree.py  test_project_board_poll.py  test_project_board_recover.py
src/: big_o.rs  canonical.rs  config.rs  export.rs  expr.rs  lib.rs  traits.rs  types.rs  variant.rs
tests/: main.rs
(+851 files in other folders)
