[package]
name = "problemreductions-cli"
version = "0.3.0"
edition = "2021"
description = "CLI tool for exploring NP-hard problem reductions"
license = "MIT"
repository = "https://github.com/CodingThrust/problem-reductions"

[[bin]]
name = "pred"
path = "src/main.rs"

[[bin]]
name = "pred-sym"
path = "src/bin/pred_sym.rs"

[features]
default = ["highs", "mcp"]
highs = ["problemreductions/ilp-highs"]
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars", "dep:tracing", "dep:tracing-subscriber"]
coin-cbc = ["problemreductions/ilp-coin-cbc"]
clarabel = ["problemreductions/ilp-clarabel"]
scip = ["problemreductions/ilp-scip"]
lpsolve = ["problemreductions/ilp-lpsolve"]
microlp = ["problemreductions/ilp-microlp"]

[dependencies]
problemreductions = { version = "0.3.0", path = "..", default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
clap_complete = "4"
owo-colors = { version = "4", features = ["supports-colors"] }
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
schemars = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
